--- a/UniFiler10/Views/BinderCoverView.xaml
+++ b/UniFiler10/Views/BinderCoverView.xaml
@@ -14,153 +14,9 @@
     d:DesignWidth="800"
     d:DataContext="{d:DesignData Type=vms:BinderCoverVM, IsDesignTimeCreatable=False}">
 
-	<!--<ctl:OpenableObservableControl.Resources>
-		<Storyboard x:Name="UpdatingStoryboard" RepeatBehavior="Forever" >
-			<ObjectAnimationUsingKeyFrames 
-                Storyboard.TargetName="RefreshVB" 
-                Storyboard.TargetProperty="Visibility">
-				<DiscreteObjectKeyFrame KeyTime="0:0:0.0" Value="Visible"/>
-			</ObjectAnimationUsingKeyFrames>
-
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.Rotation)" 
-                Storyboard.TargetName="RefreshIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="0"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="90"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="180"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="270"/>
-			</DoubleAnimationUsingKeyFrames>
-		</Storyboard>
-
-		<Storyboard x:Name="SuccessStoryboard">
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
-                Storyboard.TargetName="SuccessIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
-			</DoubleAnimationUsingKeyFrames>
-
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
-                Storyboard.TargetName="SuccessIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
-			</DoubleAnimationUsingKeyFrames>
-		</Storyboard>
-
-		<Storyboard x:Name="FailureStoryboard">
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
-                Storyboard.TargetName="FailureIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.8"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.4" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.45" Value="0"/>
-			</DoubleAnimationUsingKeyFrames>
-
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
-                Storyboard.TargetName="FailureIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.8"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.4" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.45" Value="0"/>
-			</DoubleAnimationUsingKeyFrames>
-		</Storyboard>
-	</ctl:OpenableObservableControl.Resources>-->
-
 	<ScrollViewer>
 		<!--DataContext="{x:Bind VM, Mode=OneWay}"-->
 		<RelativePanel Background="LavenderBlush" x:Name="LayoutRoot">
-
-			<ctl:AnimationsControl x:Name="AnimationsControl" RelativePanel.Below="FldFilter"/>
-			<!-- animation for refresh --><!--
-			<Viewbox x:Name="RefreshVB"
-				RelativePanel.Below="FldFilter"
-                Width="{StaticResource MiniatureHeight}"
-                Height="{StaticResource MiniatureHeight}"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Top"
-				Visibility="Collapsed"
-                Stretch="Uniform">
-				<SymbolIcon x:Name="RefreshIcon" 
-                        Symbol="Sync"
-                        RenderTransformOrigin=".5, .5"
-                        Foreground="{StaticResource DiagonalNESWBrush}"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Margin="{StaticResource ButtonPadding}">
-					<SymbolIcon.RenderTransform>
-						<CompositeTransform Rotation="0"/>
-					</SymbolIcon.RenderTransform>
-				</SymbolIcon>
-			</Viewbox>
-
-			--><!-- animation for success --><!--
-			<Viewbox
-				RelativePanel.Below="FldFilter"
-                Width="{StaticResource LandscapeItemWidth}"
-                Height="{StaticResource LandscapeItemWidth}"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Stretch="Uniform">
-				<SymbolIcon x:Name="SuccessIcon" 
-                            Symbol="Emoji2"
-                            RenderTransformOrigin=".5, .5"
-                            Foreground="{StaticResource DiagonalNESWBrush}"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Margin="{StaticResource ButtonPadding}">
-					<SymbolIcon.RenderTransform>
-						<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
-					</SymbolIcon.RenderTransform>
-				</SymbolIcon>
-			</Viewbox>
-
-			--><!-- animation for failure --><!--
-			<Viewbox
-				RelativePanel.Below="FldFilter"
-                Width="{StaticResource LandscapeItemWidth}"
-                Height="{StaticResource LandscapeItemWidth}"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Stretch="Uniform">
-				<SymbolIcon x:Name="FailureIcon" 
-                            Symbol="Dislike"
-                            RenderTransformOrigin=".5, .5"
-                            Foreground="{StaticResource DiagonalNESWBrush}"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Margin="{StaticResource ButtonPadding}">
-					<SymbolIcon.RenderTransform>
-						<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
-					</SymbolIcon.RenderTransform>
-				</SymbolIcon>
-			</Viewbox>-->
 
 			<!-- actions for all folders -->
 			<ctl:UniversalWrapPanel Orientation="Horizontal"
@@ -463,7 +319,9 @@
 					</DataTemplate>
 				</ItemsControl.ItemTemplate>
 			</ctl:TolerantListView>
-			<!--</Grid>-->
+
+			<ctl:AnimationsControl x:Name="AnimationsControl" RelativePanel.Below="FldFilter" Canvas.ZIndex="900"/>
+
 		</RelativePanel>
 	</ScrollViewer>
 </ctl:OpenableObservableControl>
