--- a/UniFiler10/Views/BriefcasePage.xaml
+++ b/UniFiler10/Views/BriefcasePage.xaml
@@ -13,85 +13,6 @@
 	d:DesignHeight="800"
     d:DesignWidth="800">
 
-	<!--<ctl:OpenableObservablePage.Resources>
-		<Storyboard x:Name="UpdatingStoryboard" RepeatBehavior="Forever" >
-			<ObjectAnimationUsingKeyFrames 
-                Storyboard.TargetName="RefreshVB" 
-                Storyboard.TargetProperty="Visibility">
-				<DiscreteObjectKeyFrame KeyTime="0:0:0.0" Value="Visible"/>
-			</ObjectAnimationUsingKeyFrames>
-
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.Rotation)" 
-                Storyboard.TargetName="RefreshIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="0"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="90"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="180"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="270"/>
-			</DoubleAnimationUsingKeyFrames>
-		</Storyboard>
-
-		<Storyboard x:Name="SuccessStoryboard">
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
-                Storyboard.TargetName="SuccessIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
-			</DoubleAnimationUsingKeyFrames>
-
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
-                Storyboard.TargetName="SuccessIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
-			</DoubleAnimationUsingKeyFrames>
-		</Storyboard>
-
-		<Storyboard x:Name="FailureStoryboard">
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" 
-                Storyboard.TargetName="FailureIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.8"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.4" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.45" Value="0"/>
-			</DoubleAnimationUsingKeyFrames>
-
-			<DoubleAnimationUsingKeyFrames 
-                Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)"
-                Storyboard.TargetName="FailureIcon">
-				<LinearDoubleKeyFrame KeyTime="0" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.05" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.15" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="1.8"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="1.6"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.3" Value="1.4"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="1.2"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.4" Value="1"/>
-				<LinearDoubleKeyFrame KeyTime="0:0:0.45" Value="0"/>
-			</DoubleAnimationUsingKeyFrames>
-		</Storyboard>
-	</ctl:OpenableObservablePage.Resources>-->
-	
 	<RelativePanel x:Name="LayoutRoot"
 		d:DataContext="{d:DesignInstance vm:BriefcaseVM, IsDesignTimeCreatable=False}">
 		<!--DataContext="{x:Bind VM, Mode=OneWay}">-->
@@ -102,69 +23,8 @@
 			GoToSettingsRequested="OnBriefcaseCoverView_GoToSettingsRequested"
 			IsEnabled="{x:Bind VM.IsOpen, Mode=OneWay, FallbackValue=false}"/>
 
-		<ctl:AnimationsControl x:Name="AnimationsControl" RelativePanel.Below="BriefcaseCoverView"/>
-		<!-- animation for refresh --><!--
-		<Viewbox x:Name="RefreshVB"
-				 RelativePanel.Below="BriefcaseCoverView"
-                Width="{StaticResource MiniatureHeight}"
-                Height="{StaticResource MiniatureHeight}"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Top"
-				Visibility="Collapsed"
-                Stretch="Uniform">
-			<SymbolIcon x:Name="RefreshIcon" 
-                        Symbol="Sync"
-                        RenderTransformOrigin=".5, .5"
-                        Foreground="{StaticResource DiagonalNESWBrush}"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Margin="{StaticResource ButtonPadding}">
-				<SymbolIcon.RenderTransform>
-					<CompositeTransform Rotation="0"/>
-				</SymbolIcon.RenderTransform>
-			</SymbolIcon>
-		</Viewbox>
-
-		--><!-- animation for success --><!--
-		<Viewbox
-				RelativePanel.Below="BriefcaseCoverView"
-                Width="{StaticResource LandscapeItemWidth}"
-                Height="{StaticResource LandscapeItemWidth}"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Stretch="Uniform">
-			<SymbolIcon x:Name="SuccessIcon" 
-                            Symbol="Emoji2"
-                            RenderTransformOrigin=".5, .5"
-                            Foreground="{StaticResource DiagonalNESWBrush}"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Margin="{StaticResource ButtonPadding}">
-				<SymbolIcon.RenderTransform>
-					<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
-				</SymbolIcon.RenderTransform>
-			</SymbolIcon>
-		</Viewbox>
-
-		--><!-- animation for failure --><!--
-		<Viewbox
-				RelativePanel.Below="BriefcaseCoverView"
-                Width="{StaticResource LandscapeItemWidth}"
-                Height="{StaticResource LandscapeItemWidth}"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Stretch="Uniform">
-			<SymbolIcon x:Name="FailureIcon" 
-                            Symbol="Dislike"
-                            RenderTransformOrigin=".5, .5"
-                            Foreground="{StaticResource DiagonalNESWBrush}"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Margin="{StaticResource ButtonPadding}">
-				<SymbolIcon.RenderTransform>
-					<CompositeTransform Rotation="0" ScaleX="0" ScaleY="0"/>
-				</SymbolIcon.RenderTransform>
-			</SymbolIcon>
-		</Viewbox>-->
+		<ctl:AnimationsControl x:Name="AnimationsControl" 
+			RelativePanel.Below="BriefcaseCoverView"
+			Canvas.ZIndex="900"/>
 	</RelativePanel>
 </ctl:OpenableObservablePage>
