more fixes for phone with low memory. Import binder is still missing.

--- a/UniFiler10/Views/BriefcasePage.xaml
+++ b/UniFiler10/Views/BriefcasePage.xaml
@@ -147,7 +147,8 @@
 									Canvas.ZIndex="150"
 									Style="{StaticResource AppBarButtonRecoloured}"
 									Foreground="{StaticResource FlashyForeground}"
-									HorizontalAlignment="Left" VerticalAlignment="Top"/>
+									HorizontalAlignment="Left" VerticalAlignment="Top"
+									IsEnabled="{Binding ElementName=me, Path=IsExporting, Converter={StaticResource TrueToFalseConverter}, Mode=OneWay}"/>
 
 								<AppBarButton Icon="Delete"
 									Tapped="OnDeleteButton_Tapped"
