--- a/UniFiler10/Views/WalletView.xaml
+++ b/UniFiler10/Views/WalletView.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="{StaticResource GridSize4Placeholder_Medium}"/>
         </Grid.RowDefinitions>
 
-		<ContentControl Grid.Row="0" IsEnabled="{x:Bind Path=VM.IsCanImportMedia, Mode=OneWay, FallbackValue=false}">
+		<ContentControl Grid.Row="0" IsEnabled="{x:Bind Path=VM.IsImportingMedia, Mode=OneWay, FallbackValue=false, Converter={StaticResource TrueToFalseConverter}}">
 			<StackPanel Orientation="Horizontal">
 				<AppBarButton
 					Icon="Camera"
