--- a/UniFiler10/Controlz/LolloButton.xaml
+++ b/UniFiler10/Controlz/LolloButton.xaml
@@ -6,6 +6,7 @@
     xmlns:local="using:UniFiler10.Controlz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:ctl="using:UniFiler10.Controlz"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -14,7 +15,7 @@
         Tapped="OnMyButton_Tapped"
 		Foreground="{Binding ElementName=me, Path=Foreground, Mode=OneWay}"
         Style="{StaticResource ButtonLolloStyle}">
-		
+
 		<VisualStateManager.VisualStateGroups>
 			<VisualStateGroup>
 				<VisualState>
@@ -22,8 +23,8 @@
 						<AdaptiveTrigger MinWindowWidth="801"/>
 					</VisualState.StateTriggers>
 					<VisualState.Setters>
-						<Setter Target="AdjustableWidthColumn.Width" Value="{StaticResource LandscapeItemWidth_ForGrid}"/>
-						<Setter Target="MyTextBlock.Visibility" Value="Visible"/>
+						<Setter Target="Small.Visibility" Value="Collapsed"/>
+						<Setter Target="Large.Visibility" Value="Visible"/>
 						<!-- LOLLO NOTE I need the brackets because Grid.Column is an attached property -->
 						<!--<Setter Target="MyAltitudeProfiles.(Grid.Column)" Value="1"/>-->
 					</VisualState.Setters>
@@ -32,22 +33,48 @@
 		</VisualStateManager.VisualStateGroups>
 
 		<Grid>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="{StaticResource LandscapeItemHeight_ForGrid}"/>
-				<ColumnDefinition Width="{StaticResource GridSize4Placeholder_Medium}"/>
-				<ColumnDefinition Width="0" x:Name="AdjustableWidthColumn"/>
-			</Grid.ColumnDefinitions>
+			<StackPanel x:Name="Small" Orientation="Vertical"
+				Width="{StaticResource LandscapeItemHeight}"
+				Height="{StaticResource LandscapeItemHeight}">
+				<!-- default height of SymbolIcon is 20-->
+				<SymbolIcon x:Name="MySymbolIconSmall"
+					HorizontalAlignment="Center"/>
+				<!--<ctl:TextBlockScaler
+					Height="30"
+					Width="{StaticResource LandscapeItemHeight}">
+					<ctl:TextBlockScaler.TextBlock>
+						<TextBlock x:Name="MyTextBlockSmall"
+							MaxWidth="{StaticResource LandscapeItemHeightMinusPanelPadding}"
+							TextAlignment="Center"
+							Style="{StaticResource SmallMessageStyle}"
+							TextWrapping="Wrap"/>
+					</ctl:TextBlockScaler.TextBlock>
+				</ctl:TextBlockScaler>-->
+				<TextBlock x:Name="MyTextBlockSmall"
+					MaxWidth="{StaticResource LandscapeItemHeightMinusPanelPadding}"
+					TextAlignment="Center"
+					Style="{StaticResource SmallMessageStyle}"
+					TextWrapping="Wrap"/>
+			</StackPanel>
 
-			<SymbolIcon x:Name="MySymbolIcon"
-				HorizontalAlignment="Center"
-				VerticalAlignment="Center"/>
-			<TextBlock x:Name="MyTextBlock"
-				Grid.Column="2"
-				Visibility="Collapsed"
-				MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
-                TextWrapping="Wrap"
-                HorizontalAlignment="Left"
-				VerticalAlignment="Center"/>
+			<Grid x:Name="Large" Visibility="Collapsed">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="{StaticResource LandscapeItemHeight_ForGrid}"/>
+					<ColumnDefinition Width="{StaticResource GridSize4Placeholder_Medium}"/>
+					<ColumnDefinition Width="{StaticResource LandscapeItemWidth_ForGrid}"/>
+				</Grid.ColumnDefinitions>
+
+				<SymbolIcon x:Name="MySymbolIconLarge"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"/>
+				<TextBlock x:Name="MyTextBlockLarge"
+					Grid.Column="2"
+					MaxWidth="{StaticResource LandscapeItemWidthMinusPanelPadding}"
+					Style="{StaticResource BaseMessageStyle}"
+					TextWrapping="Wrap"
+					HorizontalAlignment="Left"
+					VerticalAlignment="Center"/>
+			</Grid>
 		</Grid>
 	</Button>
 
